--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
 							<div class="tina2">劉育茜</div>
 						</div>
 						<div class="myphoto">
-							<img src="./tina_website/myphoto.jpg"  width=100% height=auto alt="">
+							<img src="myphoto.jpg"  width=100% height=auto alt="">
 						</div>	
 					</div>
 			<!-- 	</div>
