--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Tina個人網站</title>
 
 	<style>
 		*{
@@ -857,7 +857,7 @@
 						<div class="workexpzonebig">
 							<div class="workexpzone1">
 								<div class="workexpimg1">
-									<img src="./Tina_website/pm.png"  width=70% height=auto alt="">
+									<img src="pm.png"  width=70% height=auto alt="">
 								</div>
 								<div class="workexpcontent1"  >
 									<div>
@@ -872,7 +872,7 @@
 							</div>
 							<div class="workexpzone2">
 								<div class="workexpimg2">
-									<img src="./Tina_website/sales2.png"  width=70% height=auto alt="">
+									<img src="sales2.png"  width=70% height=auto alt="">
 								</div>
 								<div class="workexpcontent2"  >
 									<div>
@@ -886,7 +886,7 @@
 
 							<div class="workexpzone3">
 								<div class="workexpimg3">
-									<img src="./Tina_website/study.png"  width=70% height=auto alt="">
+									<img src="study.png"  width=70% height=auto alt="">
 								</div>
 								<div class="workexpcontent3"  >
 									<div>
@@ -900,7 +900,7 @@
 
 							<div class="workexpzone4">
 								<div class="workexpimg4">
-									<img src="./Tina_website/globalintern.png"  width=70% height=auto alt="">
+									<img src="globalintern.png"  width=70% height=auto alt="">
 								</div>
 								<div class="workexpcontent4"  >
 									<div>
@@ -915,7 +915,7 @@
 
 							<div class="workexpzone5">
 								<div class="workexpimg5">
-									<img src="./Tina_website/climb.png"  width=70% height=auto alt="">
+									<img src="climb.png"  width=70% height=auto alt="">
 								</div>
 								<div class="workexpcontent5"  >
 									<div>
@@ -1001,25 +1001,25 @@
 			
 			<div class="leisurephotozone">
 				<div class="leisurephoto1">
-					<img src="./Tina_website/yuanbing.jpg" width=100% alt="">
+					<img src="yuanbing.jpg" width=100% alt="">
 				</div>
 				<div class="leisurephoto2">
-					<img src="./Tina_website/china1.jpg" width=100% height=auto alt="">
+					<img src="china1.jpg" width=100% height=auto alt="">
 				</div>
 				<div class="leisurephoto3">
-					<img src="./Tina_website/graduate.jpg" width=100% height=auto alt="">
+					<img src="graduate.jpg" width=100% height=auto alt="">
 				</div>
 				<div class="leisurephoto4">
-					<img src="./Tina_website/japan2.jpg" width=100% height=auto alt="">
+					<img src="japan2.jpg" width=100% height=auto alt="">
 				</div>
 				<div class="leisurephoto5">
-					<img src="./Tina_website/cow.jpg" width=100% height=auto alt="">
+					<img src="cow.jpg" width=100% height=auto alt="">
 				</div>
 				<div class="leisurephoto6">
-					<img src="./Tina_website/climbing.JPG" width=100% height=auto alt="">
+					<img src="climbing.JPG" width=100% height=auto alt="">
 				</div>
 				<div class="leisurephoto7">
-					<img src="./Tina_website/bucket.jpg" width=100% height=auto alt="">
+					<img src="bucket.jpg" width=100% height=auto alt="">
 				</div>
 			</div>
 			<div class="leisuretitle">生活剪影</div>
@@ -1031,7 +1031,7 @@
 			<div class="projectleft">
 					<div class="projectzoneleft1">
 						<div class="projectimg1">
-							<img src="Tina_website/yozi.png"  width=100% height=auto alt="">
+							<img src="yozi.png"  width=100% height=auto alt="">
 						</div>
 						<div class="projecttext1">
 							<div>
@@ -1051,7 +1051,7 @@
 
 					<div class="projectzoneleft2">
 						<div class="projectimg2">
-							<img src="Tina_website/fungo.png"  width=100% height=auto alt="">
+							<img src="fungo.png"  width=100% height=auto alt="">
 						</div>
 						<div class="projecttext2">
 							<div>
@@ -1066,7 +1066,7 @@
 
 					<div class="projectzoneleft3">
 						<div class="projectimg3">
-							<img src="Tina_website/tuke.png"  width=100% height=auto alt="">
+							<img src="tuke.png"  width=100% height=auto alt="">
 						</div>
 						<div class="projecttext3">
 							<div>
@@ -1091,7 +1091,7 @@
 			<div class="projectright">
 					<div class="projectzoneright1">
 						<div class="projectimg4">
-							<img src="Tina_website/jtgo.png"  width=100% height=auto alt="">
+							<img src="jtgo.png"  width=100% height=auto alt="">
 						</div>
 						<div class="projecttext4">
 							<div>
@@ -1110,7 +1110,7 @@
 
 					<div class="projectzoneright2">
 						<div class="projectimg5">
-							<img src="Tina_website/kiangkiang.png"  width=100% height=auto alt="">
+							<img src="kiangkiang.png"  width=100% height=auto alt="">
 						</div>
 						<div class="projecttext5">
 							<div>
@@ -1153,7 +1153,7 @@
 			</div>
 
 			<div class="contactimg">
-				<img src="./Tina_website/contactphoto.png"  width=100% height=auto alt="">
+				<img src="contactphoto.png"  width=100% height=auto alt="">
 			</div>	
 		</div>
 
